--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
-appdirs==1.4.4
-certifi==2023.5.7
-colorama==0.4.6
-importlib-metadata==6.6.0
-pyee==8.2.2
-pypdf==3.8.1
-pyppeteer==1.0.2
-tqdm==4.65.0
-urllib3==1.26.15
-websockets==10.4
-zipp==3.15.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+exceptiongroup==1.2.2
+greenlet==3.0.3
+idna==3.10
+iniconfig==2.0.0
+packaging==24.1
+playwright==1.47.0
+pluggy==1.5.0
+pyee==12.0.0
+pypdf==4.3.1
+pytest==8.3.3
+pytest-base-url==2.1.0
+pytest-playwright==0.5.2
+python-slugify==8.0.4
+requests==2.32.3
+text-unidecode==1.3
+tomli==2.0.1
+typing_extensions==4.12.2
+urllib3==2.2.3
