--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 certifi==2024.8.30
 charset-normalizer==3.3.2
+colorama==0.4.6
 exceptiongroup==1.2.2
-greenlet==3.0.3
+greenlet==3.1.1
 idna==3.10
 iniconfig==2.0.0
 packaging==24.1
-playwright==1.47.0
+playwright==1.49.1
 pluggy==1.5.0
 pyee==12.0.0
-pypdf==4.3.1
+pypdf==5.1.0
 pytest==8.3.3
 pytest-base-url==2.1.0
 pytest-playwright==0.5.2
